[gd_scene load_steps=12 format=3 uid="uid://ex5bfnenluo6"]

[ext_resource type="Script" path="res://src/Ui/Pc/DesktopDev.gd" id="1_au8qw"]
[ext_resource type="Texture2D" uid="uid://b4vianj1j7cb0" path="res://assets/Ui/Pc/DesktopBackgrounds/Background0.png" id="1_rwqao"]
[ext_resource type="Script" path="res://src/Ui/Pc/items.gd" id="3_3v6s3"]
[ext_resource type="Texture2D" uid="uid://uyp03akyabip" path="res://assets/Ui/Pc/Icons/Main/Main.png" id="3_fj2p7"]
[ext_resource type="Texture2D" uid="uid://biktjl36w4m7g" path="res://assets/Ui/Pc/Icons/Battery/Battery1.png" id="3_n5h71"]
[ext_resource type="Texture2D" uid="uid://78801p0bohpf" path="res://assets/Ui/Pc/Icons/Battery/Battery2.png" id="4_1mbrp"]
[ext_resource type="Texture2D" uid="uid://ycrllmew8qoc" path="res://assets/Ui/Pc/Icons/Main/MainPressed.png" id="4_cbrjd"]
[ext_resource type="Texture2D" uid="uid://bsmds0bud76ul" path="res://assets/Ui/Pc/Icons/Battery/Battery3.png" id="5_4ybp1"]
[ext_resource type="Texture2D" uid="uid://ci3qqxc7ls325" path="res://assets/Ui/Pc/Icons/Main/MainHover.png" id="5_y08x7"]
[ext_resource type="BitMap" uid="uid://cgk3xfss2yhkg" path="res://assets/Ui/Pc/Icons/Main/MainClickMask.png" id="6_hjoe2"]
[ext_resource type="FontFile" uid="uid://bdivwqul7a003" path="res://assets/Fonts/Aller/AllerDisplay.ttf" id="11_m2ks1"]

[node name="Desktop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_au8qw")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_rwqao")
expand_mode = 1

[node name="TopBar" type="Panel" parent="Background"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background/TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="Month" type="Label" parent="Background/TopBar/HBoxContainer"]
layout_mode = 2
text = "22:00:00"

[node name="Weekday" type="Label" parent="Background/TopBar/HBoxContainer"]
layout_mode = 2
text = "22:00:00"

[node name="Date" type="Label" parent="Background/TopBar/HBoxContainer"]
layout_mode = 2
text = "22:00:00"

[node name="Time" type="Label" parent="Background/TopBar/HBoxContainer"]
layout_mode = 2
text = "22:00:00"

[node name="TextureProgressBar" type="TextureProgressBar" parent="Background/TopBar/HBoxContainer"]
texture_filter = 1
layout_mode = 2
value = 72.0
texture_under = ExtResource("3_n5h71")
texture_over = ExtResource("4_1mbrp")
texture_progress = ExtResource("5_4ybp1")
tint_progress = Color(0.47451, 1, 0.466667, 1)

[node name="ToolBar" type="Panel" parent="Background"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/ToolBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Main" type="TextureButton" parent="Background/ToolBar/HBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("3_fj2p7")
texture_pressed = ExtResource("4_cbrjd")
texture_hover = ExtResource("5_y08x7")
texture_click_mask = ExtResource("6_hjoe2")
stretch_mode = 1

[node name="LineEdit" type="LineEdit" parent="Background/ToolBar/HBoxContainer"]
custom_minimum_size = Vector2(384, 0)
layout_mode = 2
placeholder_text = "Search"

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -649.0
offset_right = 500.0
offset_bottom = -49.0
grow_vertical = 0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 68.0
offset_right = -19.0
grow_horizontal = 2
grow_vertical = 2

[node name="items" type="VBoxContainer" parent="Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource("3_3v6s3")

[node name="Pokemon" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="Pokedex" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="Mail" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="Phone" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="Item" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="Trainer" type="Button" parent="Panel/ScrollContainer/items"]
custom_minimum_size = Vector2(432, 64)
layout_mode = 2
alignment = 0

[node name="StartMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 151.0
offset_right = -700.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="StartMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="LowerContainer" type="VBoxContainer" parent="StartMenu/MainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="StartMenu/MainContainer/LowerContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("11_m2ks1")
theme_override_font_sizes/font_size = 24
text = "Power Options"

[node name="HBoxContainer" type="HBoxContainer" parent="StartMenu/MainContainer/LowerContainer"]
layout_mode = 2

[node name="Logout" type="Button" parent="StartMenu/MainContainer/LowerContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Logout"

[node name="PowerOff" type="Button" parent="StartMenu/MainContainer/LowerContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Poweroff"

[node name="Restart" type="Button" parent="StartMenu/MainContainer/LowerContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 3
text = "Restart"

[connection signal="gui_input" from="Background" to="." method="_on_background_gui_input"]
[connection signal="pressed" from="Background/ToolBar/HBoxContainer/Main" to="." method="_on_main_pressed"]
[connection signal="gui_input" from="Background/ToolBar/HBoxContainer/LineEdit" to="." method="_on_line_edit_gui_input"]
[connection signal="text_changed" from="Background/ToolBar/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="StartMenu/MainContainer/LowerContainer/HBoxContainer/Logout" to="." method="_on_logout_pressed"]
